# ledger-bluetooth

./: Cargo.toml
ledger-transport-ble/: Cargo.toml  README.md
ledger-transport-ble/examples/: subscribe_notify_characteristic.rs
ledger-transport-ble/src/: errors.rs  lib.rs
