[package]
name = "ledger-transport-ble"
description = "Ledger Hardware Wallet - HID Transport"
version = "0.10.0"
license = "Apache-2.0"
authors = ["Eric Woolsey <ewoolsey@ualberta.ca>"]
homepage = "https://github.com/zondax/ledger-rs"
repository = "https://github.com/zondax/ledger-rs"
readme = "README.md"
categories  = ["authentication", "cryptography"]
keywords = ["ledger", "nano", "blue", "apdu", "bluetooth"]
edition = "2021"

[dependencies]
libc = "0.2"
byteorder = "1.4"
cfg-if = "1.0.0"
thiserror = "1.0"
hex = "0.4"
log = { version = "0.4", features = ["std"] }

btleplug = "0.10"
tokio = { version = "1", features = ["macros"] }
futures = "0.3"
uuid = "1"
lazy_static = "1"

ledger-transport = "0.10"

[dev-dependencies]
once_cell = "1"
ledger-zondax-generic = "0.10"
serial_test = "0.7.0"
env_logger = "0.9"
futures = "0.3"
